@@ -944,7 +944,6 @@ bool MsWks4Zone::readFRAM(MWAWInputStreamPtr input, MWAWEntry const &entry)
       long pos = input->tell();
 
       int sz = 0;
-      int szChaine = 0;
       bool done = true;
       switch (val) {
       case 0x2e: // x
@@ -1043,21 +1042,13 @@ bool MsWks4Zone::readFRAM(MWAWInputStreamPtr input, MWAWEntry const &entry)
       if (!ok) break;
       if (done) continue;
 
-      if ((sz == 0 && szChaine == 0) ||
-          (pos + sz + szChaine > endPos)) {
+      if (sz == 0 || pos + sz > endPos) {
         input->seek(-1, librevenge::RVNG_SEEK_CUR);
         ok = false;
         break;
       }
 
       f << std::hex << val << "=" << std::dec;
-
-      if (szChaine) {
-        std::string s;
-        for (int j = 0; j < szChaine; j++)
-          s += (char) input->readULong(1);
-        f << s << ",";
-      }
       if (sz) {
         int v2 = (int) input->readLong(sz);
         f << v2;
