@@ -232,10 +232,12 @@ NisusWrtParser : parser of a Nisus Writer document : v4.0
 -   NisusWrtStruct : class which defines the different structures used by the parsed
 -   NisusWrtText : class which reads the text
 
-RagTimeParser : parser of RagTime : v2-3, in preparation, ie not functional
+RagTimeParser : parser of RagTime : v2-3
 -   RagTimeSpreadsheet: class which reads the spreadsheet's zones
 -   RagTimeStruct: small classes which define some file's basic structures
 -   RagTimeText: class which reads the text's zones
+
+RagTime5Parser : parser of RagTime : v5-6 ; only try find the main structures of the document, ie not functional
 
 SuperPaintParser: parser of drawing and paint SuperPaint files : v1 
 
